--- a/style.css
+++ b/style.css
@@ -103,10 +103,13 @@ li a::after{
         transition: .5s ease-in-out;
         width: 50vw;
         font-size: italic;
-        box-shadow: rgba(240, 46, 170, 0.4) -5px 5px, rgba(240, 46, 170, 0.3) -10px 10px, rgba(240, 46, 170, 0.2) -15px 15px, rgba(240, 46, 170, 0.1) -20px 20px, rgba(240, 46, 170, 0.05) -25px 25px;    }
+        box-shadow: rgba(240, 46, 170, 0.4) -5px 5px, rgba(240, 46, 170, 0.3) -10px 10px, rgba(240, 46, 170, 0.2) -15px 15px, rgba(240, 46, 170, 0.1) -20px 20px, rgba(240, 46, 170, 0.05) -25px 25px;   
+        visibility: hidden;
+    }
 
     ul.active{
         transform: translate(0%);
+        visibility: visible;
     }
 
     ul li:nth-child(5),
