--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body{
 
 html{
     font-family: 'Inter', sans-serif;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 *, *::after, *::befor{
@@ -93,23 +93,21 @@ li a::after{
     ul{
         position: absolute;
         right: 0;
-        top: 10vh;
+        top: 10.56vh;
         background-color: var(--responsive);
         height: 88.3vh;
         flex-direction: column;
         text-align: center;
         justify-content: space-between;
-        transform: translate(110%);
+        transform: translate(105%);
         transition: .5s ease-in-out;
         width: 50vw;
         font-size: italic;
         box-shadow: rgba(240, 46, 170, 0.4) -5px 5px, rgba(240, 46, 170, 0.3) -10px 10px, rgba(240, 46, 170, 0.2) -15px 15px, rgba(240, 46, 170, 0.1) -20px 20px, rgba(240, 46, 170, 0.05) -25px 25px;   
-        visibility: hidden;
     }
 
     ul.active{
         transform: translate(0%);
-        visibility: visible;
     }
 
     ul li:nth-child(5),
