--- a/style.css
+++ b/style.css
@@ -25,10 +25,11 @@ html{
 nav{
     background-color: var(--navbar);
     display: flex;
+    height: 5vh;box-shadow: rgba(240, 46, 170, 0.4) 0px 5px, rgba(240, 46, 170, 0.3) 0px 10px, rgba(240, 46, 170, 0.2) 0px 15px, rgba(240, 46, 170, 0.1) 0px 20px, rgba(240, 46, 170, 0.05) 0px 25px;
     justify-content: space-between;
+    min-width: 100vw;
     padding: 2rem;
     position: relative;
-    height: 5vh;box-shadow: rgba(240, 46, 170, 0.4) 0px 5px, rgba(240, 46, 170, 0.3) 0px 10px, rgba(240, 46, 170, 0.2) 0px 15px, rgba(240, 46, 170, 0.1) 0px 20px, rgba(240, 46, 170, 0.05) 0px 25px;
 }
 
 .logo-img{
@@ -45,34 +46,34 @@ li{
     padding: 0 3rem;
 }
 li a{
-    text-decoration: none;
     color: #fff;
     font-size: 24px;
     position: relative;
+    text-decoration: none;
 }
 
 li a::after{
-    content: '';
-    position: absolute;
     bottom: 0;
+    content: '';
     left: 0;
+    position: absolute;
 }
 
 
 .sign-in a,
 .sign-up a{
-    color: var(--navbar);
-    padding: .7rem;
-    border-radius: 10rem;
     background-color: #fff;
+    border-radius: 10rem;
+    color: var(--navbar);
     font-weight: 700;
+    padding: .7rem;
 }
 
 
 .hamburger{
-    position: relative;
-    display: none;
     cursor: pointer;
+    display: none;
+    position: relative;
 }
 
 .hamburger div{
@@ -91,19 +92,19 @@ li a::after{
     
 
     ul{
+        background-color: var(--responsive);
+        box-shadow: rgba(240, 46, 170, 0.4) -5px 5px, rgba(240, 46, 170, 0.3) -10px 10px, rgba(240, 46, 170, 0.2) -15px 15px, rgba(240, 46, 170, 0.1) -20px 20px, rgba(240, 46, 170, 0.05) -25px 25px;   
+        flex-direction: column;
+        font-size: italic;
+        height: 88.3vh;
+        justify-content: space-between;
         position: absolute;
         right: 0;
-        top: 10.56vh;
-        background-color: var(--responsive);
-        height: 88.3vh;
-        flex-direction: column;
         text-align: center;
-        justify-content: space-between;
+        top: 10.56vh;
         transform: translate(105%);
         transition: .5s ease-in-out;
         width: 50vw;
-        font-size: italic;
-        box-shadow: rgba(240, 46, 170, 0.4) -5px 5px, rgba(240, 46, 170, 0.3) -10px 10px, rgba(240, 46, 170, 0.2) -15px 15px, rgba(240, 46, 170, 0.1) -20px 20px, rgba(240, 46, 170, 0.05) -25px 25px;   
     }
 
     ul.active{
@@ -119,8 +120,8 @@ li a::after{
 
     li a{
         font-size: 32px;
-        letter-spacing: 2.5px;
         font-weight: 600;
+        letter-spacing: 2.5px;
         margin: 1rem;
     }
 
